--- a/index.html
+++ b/index.html
@@ -83,12 +83,38 @@
             <ul id="latestnews">
 
                 <li> <b>
-                    <font color="#FF0000">[2023.10]</font>
-                </b> Paper of Li Qiao was accecpted by IEEE TCOM (
-                <a href="https://arxiv.org/pdf/2307.10837.pdf" target="_blank">
-                    <font>乔力论文被IEEE TCOM (IF=8.3)期刊录用</font>
-                </a>)【近场超大阵列的感知通信一体化】
-            </li>
+                        <font color="#FF0000">[2023.11]</font>
+                    </b> 博士生万子维、吴铭晖，硕士生周星宇获得研究生特等奖学金，博士生应科柯获得国瑞奖学金。
+                </li>
+
+                <li> <b>
+                        <font color="#FF0000">[2023.11]</font>
+                    </b> Ph.D. student Minghui Wu and M.S. student Xingyu Zhou are awarded National Scholarship (博士生吴铭晖和硕士生周星宇获得研究生国家奖学金)
+                </li>
+
+                <li> <b>
+                        <font color="#FF0000">[2023.11]</font>
+                    </b> Dr. Zhen Gao was selected into World's Top 2% Scientists   
+                    <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/6" target="_blank">
+                        <font>(高镇入选斯坦福大学全球前2%顶尖科学家2022年度榜单)</font>
+                    </a>
+                </li>
+
+                <li> <b>
+                        <font color="#FF0000">[2023.11]</font>
+                    </b> Paper of Kuiyu Wang was awarded IEEE ICCT 2023 Best Paper (王馗宇论文入选国际学术会议IEEE ICCT 2023最佳论文奖) 
+                    <a href="https://arims.bit.edu.cn/xw/943086d7db764bc1a0788d5fefb2ec34.htm" target="_blank">
+                        <font color="#FF0000">【北理工交叉院新闻报道】</font>
+                    </a>
+                </li>
+
+                <li> <b>
+                        <font color="#FF0000">[2023.10]</font>
+                    </b> Paper of Li Qiao was accecpted by IEEE TCOM (
+                    <a href="https://arxiv.org/pdf/2307.10837.pdf" target="_blank">
+                        <font>乔力论文被IEEE TCOM (IF=8.3)期刊录用</font>
+                    </a>)【近场超大阵列的感知通信一体化】
+                </li>
 
                 <li> <b>
                     <font color="#FF0000">[2023.09]</font>
@@ -153,19 +179,6 @@
                     </b> Xingyu Zhou joined Qualcomm as an intern (周星宇获得高通公司实习岗位)
                 </li>
 
-                <li> <b>
-                        <font color="#FF0000">[2023.05]</font>
-                    </b> Paper of Ziwei Wan was awarded Best Student Paper, EAI WiSATS 2022 (万子维论文被国际学术会议EAI WiSATS
-                    2022评为最佳学生论文奖)
-                </li>
-
-                <li> <b>
-                        <font color="#FF0000">[2023.05]</font>
-                    </b> Paper of Zhuoran Li was accecpted by IEEE JSTSP (李卓然论文被IEEE JSTSP
-                    (IF=7.70)期刊录用)【混合场波束偏移效应下的信道估计与定位】
-                </li>
-
-
                 <details>
                     <summary>View More Earlier News</summary>
                     <!-- <li> <b>
@@ -174,6 +187,18 @@
                         <font>高镇入选重要期刊IEEE Trans. Veh. Technol. 编委</font>
                     </a>)
                 </li> -->
+                    <li> <b>
+                            <font color="#FF0000">[2023.05]</font>
+                        </b> Paper of Ziwei Wan was awarded Best Student Paper, EAI WiSATS 2022 (万子维论文被国际学术会议EAI WiSATS
+                        2022评为最佳学生论文奖)
+                    </li>
+
+                    <li> <b>
+                            <font color="#FF0000">[2023.05]</font>
+                        </b> Paper of Zhuoran Li was accecpted by IEEE JSTSP (李卓然论文被IEEE JSTSP
+                        (IF=7.70)期刊录用)【混合场波束偏移效应下的信道估计与定位】
+                    </li>
+
                     <li> <b>
                             <font color="#FF0000">[2023.04]</font>
                         </b> Shicong Liu was awarded Hong Kong PhD Fellowship Scheme (HKPFS) at CityU Hong Kong (<a
@@ -600,7 +625,7 @@
                 6G 大规模 MIMO 通信，以及人工智能赋能6G通信等。获得IEEE Trans. Broadcast. 2016 最佳论文奖、IET Electron. Lett. 2016 最佳论文奖、UCET 2020 最佳
                 论文、IEEE/CIC ICCC 2021 最佳论文、IEEE IWCMC 2022最佳论文、EAI WiSATS 2022最佳学生论文奖。发表SCI 论文 60余 篇，包括9篇 ESI 高被引论文，2 篇前 
                 0.1%热点论文，谷歌学术引用4500余次。入选国家级青年人才计划、北京市科技新星、山东省优青、中国科协青年人才托举工程，爱思唯尔 2020、2021 、2022年中国
-                高被引学者，获得2021年中国电子学会自然科学一等奖、2022年中国电子学会技术发明一等奖、2022年中国指控学会科技进步一等奖。担任IEEE Transactions 
+                高被引学者，入选斯坦福大学全球前2%顶尖科学家榜单 (2022年度)，获得2021年中国电子学会自然科学一等奖、2022年中国电子学会技术发明一等奖、2022年中国指控学会科技进步一等奖。担任IEEE Transactions 
                 Vehicular Technology编委、IEEE Communications Letters 编委、IEEE Systems Journal 编委、Frontiers in Communications and Networks 编委。
             </p>
 
@@ -1402,6 +1427,14 @@
                 </b>: </p>
             <font size="3">
                 <ul>
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[61] Li Qiao, Anwen Liao, Zhuoran Li, Hua Wang, <b>Zhen Gao</b>, Xiang Gao, Yu Su, Pei Xiao, Li You. Derrick Wing Kwan Ng, 
+                            "Sensing User's Activity, Channel, and Location with Near-Field Extra-Large-Scale MIMO," in IEEE Transactions on Communications, doi: 10.1109/TCOMM.2023.3324997.
+                            [<a href="https://arxiv.org/abs/2307.10837" target="_blank">arXiv</a>]
+                            [<a href="https://ieeexplore.ieee.org/document/10286475" target="_blank">IEEE URL</a>]
+                        </span>
+                    </p>
+
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[60] L. Li, Y. Yang, L. Bao, <b>Z. Gao</b>, Y. Wu and H. Xiang, "Deep Reinforcement Learning based Downlink Beamforming and 
                             Phase Optimization for RIS-Aided Communication System," in IEEE Wireless Communications Letters, doi: 10.1109/LWC.2023.3318212.
