--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
                 6G 大规模 MIMO 通信，以及人工智能赋能6G通信等。获得IEEE Trans. Broadcast. 2016 最佳论文奖、IET Electron. Lett. 2016 最佳论文奖、UCET 2020 最佳
                 论文、IEEE/CIC ICCC 2021 最佳论文、IEEE IWCMC 2022最佳论文、EAI WiSATS 2022最佳学生论文奖。发表SCI 论文 60余 篇，包括9篇 ESI 高被引论文，2 篇前 
                 0.1%热点论文，谷歌学术引用4500余次。入选国家级青年人才计划、北京市科技新星、山东省优青、中国科协青年人才托举工程，爱思唯尔 2020、2021 、2022年中国
-                高被引学者，入选斯坦福大学全球前2%顶尖科学家榜单 (2022年度)，获得2021年中国电子学会自然科学一等奖、2022年中国电子学会技术发明一等奖、2022年中国指控学会科技进步一等奖。担任IEEE Transactions 
+                高被引学者，入选斯坦福大学全球前2%顶尖科学家榜单 (2020、2021、2022年度)，获得2021年中国电子学会自然科学一等奖、2022年中国电子学会技术发明一等奖、2022年中国指控学会科技进步一等奖。担任IEEE Transactions 
                 Vehicular Technology编委、IEEE Communications Letters 编委、IEEE Systems Journal 编委、Frontiers in Communications and Networks 编委。
             </p>
 
