--- a/index.html
+++ b/index.html
@@ -83,6 +83,14 @@
             <ul id="latestnews">
 
                 <li> <b>
+                        <font color="#FF0000">[2023.12]</font>
+                    </b> Paper of Malong Ke was accecpted by IEEE IoTJ (
+                        <a href="https://ieeexplore.ieee.org/document/10329933" target="_blank">
+                    <font>柯玛龙论文被IEEE IOTJ (IF=10.6)期刊录用</font>
+                    </a>)【6G海量通信免调度接入】
+                </li>
+
+                <li> <b>
                         <font color="#FF0000">[2023.11]</font>
                     </b> 博士生万子维、吴铭晖，硕士生周星宇获得研究生特等奖学金，博士生应科柯获得国瑞奖学金。
                 </li>
@@ -156,29 +164,6 @@
                     </b> 硕士生刘仕聪、王洋分别获得北京理工大学优秀硕士毕业论文荣誉；本科生王岳卿、王瑞琪获得北京理工大学优秀本科毕设。
                 </li>
 
-                <li> <b>
-                        <font color="#FF0000">[2023.06]</font>
-                    </b> 博士生柯玛龙，硕士生刘仕聪、王洋，本科生王岳卿获得北京市优秀毕业生、北京理工大学优秀毕业生荣誉；本科生王瑞琪获得北京理工大学优秀毕业生荣誉。
-                </li>
-
-                <li> <b>
-                        <font color="#FF0000">[2023.06]</font>
-                    </b> Yang Wang was awarded Xu-Teli Fellowship (王洋获得北理工学生最高荣誉奖学金——徐特立奖学金)
-                    <a href="https://mp.weixin.qq.com/s/_9wutgk3yYvf9zQ85elWZw" target="_blank">
-                        <font color="#FF0000">【北理工信息学院专题报道】</font>
-                    </a>
-                </li>
-
-                <li> <b>
-                    <font color="#FF0000">[2023.06]</font>
-                </b> Ziwei Wan was awarded Northern Industrial Scholarship (博士生万子维获得北方工业奖学金)
-                </li>
-
-                <li> <b>
-                        <font color="#FF0000">[2023.06]</font>
-                    </b> Xingyu Zhou joined Qualcomm as an intern (周星宇获得高通公司实习岗位)
-                </li>
-
                 <details>
                     <summary>View More Earlier News</summary>
                     <!-- <li> <b>
@@ -187,6 +172,29 @@
                         <font>高镇入选重要期刊IEEE Trans. Veh. Technol. 编委</font>
                     </a>)
                 </li> -->
+                    <li> <b>
+                            <font color="#FF0000">[2023.06]</font>
+                        </b> 博士生柯玛龙，硕士生刘仕聪、王洋，本科生王岳卿获得北京市优秀毕业生、北京理工大学优秀毕业生荣誉；本科生王瑞琪获得北京理工大学优秀毕业生荣誉。
+                    </li>
+
+                    <li> <b>
+                            <font color="#FF0000">[2023.06]</font>
+                        </b> Yang Wang was awarded Xu-Teli Fellowship (王洋获得北理工学生最高荣誉奖学金——徐特立奖学金)
+                            <a href="https://mp.weixin.qq.com/s/_9wutgk3yYvf9zQ85elWZw" target="_blank">
+                            <font color="#FF0000">【北理工信息学院专题报道】</font>
+                        </a>
+                    </li>
+
+                    <li> <b>
+                            <font color="#FF0000">[2023.06]</font>
+                        </b> Ziwei Wan was awarded Northern Industrial Scholarship (博士生万子维获得北方工业奖学金)
+                    </li>
+
+                    <li> <b>
+                            <font color="#FF0000">[2023.06]</font>
+                        </b> Xingyu Zhou joined Qualcomm as an intern (周星宇获得高通公司实习岗位)
+                    </li>
+
                     <li> <b>
                             <font color="#FF0000">[2023.05]</font>
                         </b> Paper of Ziwei Wan was awarded Best Student Paper, EAI WiSATS 2022 (万子维论文被国际学术会议EAI WiSATS
@@ -1427,6 +1435,15 @@
                 </b>: </p>
             <font size="3">
                 <ul>
+
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[62] <b>Zhen Gao</b>, Malong Ke, Yikun Mei, Li Qiao, Sheng Chen, Derrick Wing Kwan Ng, H. Vincent Poor, 
+                            "Compressive Sensing-Based Grant-Free Massive Access for 6G Massive Communication," IEEE Internet of Things Journal, doi: 10.1109/JIOT.2023.3334878.
+                            [<a href="https://arxiv.org/abs/2311.06770" target="_blank">arXiv</a>]
+                            [<a href="https://ieeexplore.ieee.org/document/10329933" target="_blank">IEEE URL</a>]
+                        </span>
+                    </p>
+
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[61] Li Qiao, Anwen Liao, Zhuoran Li, Hua Wang, <b>Zhen Gao</b>, Xiang Gao, Yu Su, Pei Xiao, Li You. Derrick Wing Kwan Ng, 
                             "Sensing User's Activity, Channel, and Location with Near-Field Extra-Large-Scale MIMO," in IEEE Transactions on Communications, doi: 10.1109/TCOMM.2023.3324997.
