--- a/index.html
+++ b/index.html
@@ -2815,6 +2815,8 @@
                 <font size="3">
                     <ul>
                         <li>IEEE Member</li>
+                        <li>北京通信学会第十届理事会通信终端专业委员会副主任委员</li>
+                        <li>中国指挥与控制学会空间信息通信技术专业委员会委员 </li>
                     </ul>
                 </font>
                 <br />
