--- a/index.html
+++ b/index.html
@@ -83,6 +83,14 @@
             <ul id="latestnews">
 
                 <li> <b>
+                    <font color="#FF0000">[2024.01]</font>
+                </b> Paper of Yifei Zhang was accecpted by IEEE Network (
+                    <a href="https://ieeexplore.ieee.org/document/10400499" target="_blank">
+                <font>张翼飞论文被IEEE Network (IF=9.3)期刊录用</font>
+                </a>)【基于AI的信道语义获取与6G通感一体化】
+                </li>
+
+                <li> <b>
                         <font color="#FF0000">[2023.12]</font>
                     </b> Paper of Malong Ke was accecpted by IEEE IoTJ (
                         <a href="https://ieeexplore.ieee.org/document/10329933" target="_blank">
@@ -1435,6 +1443,13 @@
                 </b>: </p>
             <font size="3">
                 <ul>
+
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[63] Yifei Zhang, <b>Zhen Gao</b>, Jingjing Zhao, Ziming He, Yunsheng Zhang, Chen Lu, Pei Xiao, "AI Empowered Channel Semantic Acquisition for 
+                            6G Integrated Sensing and Communication Networks," in IEEE Network, doi: 10.1109/MNET.2024.3354264.
+                            [<a href="https://ieeexplore.ieee.org/document/10400499" target="_blank">IEEE URL</a>]
+                        </span>
+                    </p>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[62] <b>Zhen Gao</b>, Malong Ke, Yikun Mei, Li Qiao, Sheng Chen, Derrick Wing Kwan Ng, H. Vincent Poor, 
