--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                 <font size="4" ; font style="font-family:Microsoft YaHei">高 镇</font>
                                 <font size="4">)</font>
                             </a><br />
-                            <i> Ph.D., Associate Professor, Ph.D. Supervisor </i>
+                            <i> Ph.D., Professor, Ph.D. Supervisor </i>
                             <br /><br />
                             <a href="http://arims.bit.edu.cn/" target="_blank">Advanced Research Institute of
                                 Multidisciplinary Science (ARIMS)</a><br />
