--- a/index.html
+++ b/index.html
@@ -2981,7 +2981,7 @@
                             <summary>在读期间成果</summary>
                             <p style="text-indent: 1.0rem;margin-left: 0.5rem;margin-right: 5.0rem;">
                                 刘仕聪，2020级硕士，获2020、2021年国家奖学金，2021年特等学业奖学金等，并获得香港政府博士生奖学金计划资助攻读博士学位。
-                                硕士期间于IEEE TVT、COMMAG等期刊发表期刊论文2篇，会议论文1篇，获AI无线通信竞赛团队三等奖1次。获校优秀学生、
+                                硕士期间于IEEE TVT、COMMAG等期刊发表期刊论文2篇，会议论文1篇（IEEE IWCMC2022最佳学生论文奖），获AI无线通信竞赛团队三等奖1次。获校优秀学生、
                                 优秀硕士论文、北京市优秀毕业生表彰。
                             </p>   
                             <p style="text-indent: 1.0rem;margin-left: 0.5rem;margin-right: 5.0rem;">
@@ -3000,7 +3000,7 @@
                         <details>
                             <summary>在读期间成果</summary>
                             <p style="text-indent: 1.0rem;margin-left: 0.5rem;margin-right: 5.0rem;">
-                                王洋，2020级硕士，获2023年徐特立奖学金，2022年国家奖学金，2022年特等学业奖学金，2021年小米特等奖学金等。
+                                王洋，2020级硕士，获2023年徐特立奖学金，2023年中国通信学会优秀硕士论文，2022年国家奖学金，2022年特等学业奖学金，2021年小米特等奖学金等。
                                 硕士期间于IEEE IoTJ、WCM等期刊发表SCI论文2篇，会议EI论文1篇，获无线大数据竞赛个人二等奖，AI无线通信竞赛团队三等奖。
                                 获校优秀学生、优秀硕士论文、北京市优秀毕业生表彰。
                             </p>   
