--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <td align="left">
                         <p>
                             <a href="./">
-                                <i class="fa fa-graduation-cap" aria-hidden="true"></i>
+                                <i class="fa fa-birthday-cake" aria-hidden="true"></i>&nbsp;<i class="fa fa-graduation-cap" aria-hidden="true"></i>
                                 <font size="4">Dr. Zhen Gao (</font>
                                 <font size="4" ; font style="font-family:Microsoft YaHei">高 镇</font>
                                 <font size="4">)</font>
