--- a/index.html
+++ b/index.html
@@ -83,6 +83,22 @@
             <ul id="latestnews">
 
                 <li> <b>
+                    <font color="#FF0000">[2024.03]</font>
+                </b> Paper of Kuiyu Wang was accepted by IEEE TWC (
+                    <a href="https://arxiv.org/abs/2403.12813" target="_blank">
+                <font>王馗宇论文被IEEE TWC (IF=10.4)录用</font>
+                </a>)【超大MIMO混合场波束偏移信道知识数据协同驱动信道估计反馈】
+                </li>
+
+                <li> <b>
+                    <font color="#FF0000">[2024.02]</font>
+                </b>  Paper of Yang Wang was published by Intelligent Computing (
+                    <a href="https://spj.science.org/doi/10.34133/icomputing.0065" target="_blank">
+                <font>王洋论文被Science伙伴期刊Intelligent Computing录用</font>
+                </a>)【混合场信道太赫兹RIS深度学习信道插值与波束赋形】
+                </li>
+
+                <li> <b>
                     <font color="#FF0000">[2024.01]</font>
                 </b> Paper of Yifei Zhang was accecpted by IEEE Network (
                     <a href="https://ieeexplore.ieee.org/document/10400499" target="_blank">
@@ -124,54 +140,6 @@
                     </a>
                 </li>
 
-                <li> <b>
-                        <font color="#FF0000">[2023.10]</font>
-                    </b> Paper of Li Qiao was accecpted by IEEE TCOM (
-                    <a href="https://arxiv.org/pdf/2307.10837.pdf" target="_blank">
-                        <font>乔力论文被IEEE TCOM (IF=8.3)期刊录用</font>
-                    </a>)【近场超大阵列的感知通信一体化】
-                </li>
-
-                <li> <b>
-                    <font color="#FF0000">[2023.09]</font>
-                    </b> Dr. Zhen Gao gives a talk in THIS Forum—6G RIS Technology (6G智能超表面技术研讨会《波束偏移效应下的智能超表面通信感知一体化》)
-                    <a href="./Files/gaozhenslide202309.pdf" target="_blank">[slide]
-                    </a>
-                    <a href="https://www.bilibili.com/video/BV1G84y1U71W/" target="_blank"><font color="#FF0000">[video]</font>
-                    </a>
-                </li>
-
-                <li> <b>
-                    <font color="#FF0000">[2023.09]</font>
-                    </b> 高镇入选教育部国家级青年人才计划。
-                </li>
-
-                <li> <b>
-                        <font color="#FF0000">[2023.08]</font>
-                    </b> Yifei Zhang won the championship of the 2023 Wireless Big Data Competition (张翼飞获得第四届无线大数据竞赛冠军"智能多波束优化")
-                    <a href="https://mp.weixin.qq.com/s/yIgUqQs2-r9h-Jstv_srzw" target="_blank">
-                        <font color="#FF0000">【北理工信息学院公众号报道】</font>
-                    </a>
-                </li>
-
-                <li> <b>
-                        <font color="#FF0000">[2023.08]</font>
-                    </b> Dr. Zhen Gao gives a talk in Blue Ocean Forum 2023 (蓝海论坛报告《大规模MIMO系统海量设备免调度非正交接入》)
-                    <a href="./Files/ZhenGaoBOF202308.pdf" target="_blank">[slide]
-                    </a>
-                </li>
-
-                <li> <b>
-                        <font color="#FF0000">[2023.07]</font>
-                    </b> Paper of Shicong Liu was accecpted by IEEE JSTSP (刘仕聪论文被IEEE JSTSP
-                    (IF=7.70)期刊录用)【知识数据协同驱动的无蜂窝大规模MIMO传输】
-                </li>
-
-                <li> <b>
-                        <font color="#FF0000">[2023.07]</font>
-                    </b> 硕士生刘仕聪、王洋分别获得北京理工大学优秀硕士毕业论文荣誉；本科生王岳卿、王瑞琪获得北京理工大学优秀本科毕设。
-                </li>
-
                 <details>
                     <summary>View More Earlier News</summary>
                     <!-- <li> <b>
@@ -180,6 +148,54 @@
                         <font>高镇入选重要期刊IEEE Trans. Veh. Technol. 编委</font>
                     </a>)
                 </li> -->
+                    <li> <b>
+                        <font color="#FF0000">[2023.10]</font>
+                        </b> Paper of Li Qiao was accecpted by IEEE TCOM (
+                        <a href="https://arxiv.org/pdf/2307.10837.pdf" target="_blank">
+                            <font>乔力论文被IEEE TCOM (IF=8.3)期刊录用</font>
+                        </a>)【近场超大阵列的感知通信一体化】
+                    </li>
+
+                    <li> <b>
+                        <font color="#FF0000">[2023.09]</font>
+                        </b> Dr. Zhen Gao gives a talk in THIS Forum—6G RIS Technology (6G智能超表面技术研讨会《波束偏移效应下的智能超表面通信感知一体化》)
+                        <a href="./Files/gaozhenslide202309.pdf" target="_blank">[slide]
+                        </a>
+                        <a href="https://www.bilibili.com/video/BV1G84y1U71W/" target="_blank"><font color="#FF0000">[video]</font>
+                        </a>
+                    </li>
+
+                    <li> <b>
+                        <font color="#FF0000">[2023.09]</font>
+                        </b> 高镇入选教育部国家级青年人才计划。
+                    </li>
+
+                    <li> <b>
+                        <font color="#FF0000">[2023.08]</font>
+                        </b> Yifei Zhang won the championship of the 2023 Wireless Big Data Competition (张翼飞获得第四届无线大数据竞赛冠军"智能多波束优化")
+                        <a href="https://mp.weixin.qq.com/s/yIgUqQs2-r9h-Jstv_srzw" target="_blank">
+                        <font color="#FF0000">【北理工信息学院公众号报道】</font>
+                    </a>
+                    </li>
+
+                    <li> <b>
+                            <font color="#FF0000">[2023.08]</font>
+                        </b> Dr. Zhen Gao gives a talk in Blue Ocean Forum 2023 (蓝海论坛报告《大规模MIMO系统海量设备免调度非正交接入》)
+                        <a href="./Files/ZhenGaoBOF202308.pdf" target="_blank">[slide]
+                        </a>
+                    </li>
+
+                    <li> <b>
+                            <font color="#FF0000">[2023.07]</font>
+                        </b> Paper of Shicong Liu was accecpted by IEEE JSTSP (刘仕聪论文被IEEE JSTSP
+                        (IF=7.70)期刊录用)【知识数据协同驱动的无蜂窝大规模MIMO传输】
+                    </li>
+
+                    <li> <b>
+                            <font color="#FF0000">[2023.07]</font>
+                        </b> 硕士生刘仕聪、王洋分别获得北京理工大学优秀硕士毕业论文荣誉；本科生王岳卿、王瑞琪获得北京理工大学优秀本科毕设。
+                    </li>
+
                     <li> <b>
                             <font color="#FF0000">[2023.06]</font>
                         </b> 博士生柯玛龙，硕士生刘仕聪、王洋，本科生王岳卿获得北京市优秀毕业生、北京理工大学优秀毕业生荣誉；本科生王瑞琪获得北京理工大学优秀毕业生荣誉。
@@ -1443,6 +1459,12 @@
                 </b>: </p>
             <font size="3">
                 <ul>
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[64] Yang Wang, <b>Zhen Gao</b>, Sheng Chen, Chun Hu, Dezhi Zheng, "Deep Learning–Based Channel Extrapolation and Multiuser Beamforming for RIS-aided 
+                            Terahertz Massive MIMO Systems over Hybrid-Field Channels," Intelligent Computing, 13 Mar 2024 Vol 3.
+                            [<a href="https://spj.science.org/doi/full/10.34133/icomputing.0065" target="_blank">URL</a>]
+                        </span>
+                    </p>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[63] Yifei Zhang, <b>Zhen Gao</b>, Jingjing Zhao, Ziming He, Yunsheng Zhang, Chen Lu, Pei Xiao, "AI Empowered Channel Semantic Acquisition for 
