--- a/index.html
+++ b/index.html
@@ -83,9 +83,25 @@
             <ul id="latestnews">
 
                 <li> <b>
+                    <font color="#FF0000">[2024.04]</font>
+                </b> Dr. Zhen Gao is the recipient of Beijing Youth Outstanding Science and Technology Papers (
+                    <a href="https://www.bast.net.cn/art/2024/3/20/art_31266_19718.html" target="_blank">
+                <font>高镇WCM论文入选第十七届北京青年优秀科技论文</font>
+                </a>)
+                </li>
+
+                <li> <b>
+                    <font color="#FF0000">[2024.04]</font>
+                </b> Dr. Zhen Gao is the recipient of Elsevier 2023 MOST Cited Chinese Researchers (
+                    <a href=".\Files\gzgby.jpg" target="_blank">
+                <font>高镇 入选爱思唯尔2023中国高被引学者</font>
+                </a>)
+                </li>
+
+                <li> <b>
                     <font color="#FF0000">[2024.03]</font>
                 </b> Paper of Kuiyu Wang was accepted by IEEE TWC (
-                    <a href="https://arxiv.org/abs/2403.12813" target="_blank">
+                    <a href="https://ieeexplore.ieee.org/document/10486834" target="_blank">
                 <font>王馗宇论文被IEEE TWC (IF=10.4)录用</font>
                 </a>)【超大MIMO混合场波束偏移信道知识数据协同驱动信道估计反馈】
                 </li>
@@ -653,7 +669,7 @@
                 <br />
                 <br />
 
-                特别研究员、长聘副教授，博士生导师，入选国家级青年人才计划。主要从事宽带通信与智能信号处理，包括物联网机器类通信、智能边缘计算、空天地一体化信息网络、
+                特别研究员、教授，博士生导师，入选国家级青年人才计划。主要从事宽带通信与智能信号处理，包括物联网机器类通信、智能边缘计算、空天地一体化信息网络、
                 6G 大规模 MIMO 通信，以及人工智能赋能6G通信等。获得IEEE Trans. Broadcast. 2016 最佳论文奖、IET Electron. Lett. 2016 最佳论文奖、UCET 2020 最佳
                 论文、IEEE/CIC ICCC 2021 最佳论文、IEEE IWCMC 2022最佳论文、EAI WiSATS 2022最佳学生论文奖。发表SCI 论文 60余 篇，包括9篇 ESI 高被引论文，2 篇前 
                 0.1%热点论文，谷歌学术引用4500余次。入选国家级青年人才计划、北京市科技新星、山东省优青、中国科协青年人才托举工程，爱思唯尔 2020、2021 、2022年中国
@@ -1459,6 +1475,13 @@
                 </b>: </p>
             <font size="3">
                 <ul>
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[65] Kuiyu Wang, <b>Zhen Gao</b>, Sheng Chen, Boyu Ning, Gaojie Chen, Yu Su, Zhaocheng Wang, H. Vincent Poor, "Knowledge and Data Dual-Driven Channel Estimation and Feedback for Ultra-Massive MIMO Systems under Hybrid Field Beam Squint Effect," 
+                            in IEEE Transactions on Wireless Communications, doi: 10.1109/TWC.2024.3380638. 
+                            [<a href="https://ieeexplore.ieee.org/document/10486834" target="_blank">IEEE URL</a>]
+                        </span>
+                    </p>
+
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[64] Yang Wang, <b>Zhen Gao</b>, Sheng Chen, Chun Hu, Dezhi Zheng, "Deep Learning–Based Channel Extrapolation and Multiuser Beamforming for RIS-aided 
                             Terahertz Massive MIMO Systems over Hybrid-Field Channels," Intelligent Computing, 13 Mar 2024 Vol 3.
