--- a/index.html
+++ b/index.html
@@ -1187,6 +1187,13 @@
                             </span>
                         </p>
 
+                        <p style="text-indent: -2.0rem;margin-left: 3.0rem;width: 90%">
+                            <span>
+                                <font color="#FF0000">[R14]</font> Li Qiao, Anwen Liao, Zhuoran Li, Hua Wang, <b>Zhen Gao</b>, Xiang Gao, Yu Su, Pei Xiao, Li You. Derrick Wing Kwan Ng, 
+                                "Sensing User's Activity, Channel, and Location with Near-Field Extra-Large-Scale MIMO," in IEEE Transactions on Communications, vol. 72, no. 2, pp. 890-906, Feb. 2024, doi: 10.1109/TCOMM.2023.3324997.
+                            </span>
+                        </p>
+
                     </details>
                 </li>
 
@@ -1379,6 +1386,13 @@
                             </span>
                         </p>
 
+                        <p style="text-indent: -2.0rem;margin-left: 3.0rem;width: 90%">
+                            <span>
+                                <font color="#FF0000">[R3]</font> Li Qiao, Anwen Liao, Zhuoran Li, Hua Wang, <b>Zhen Gao</b>, Xiang Gao, Yu Su, Pei Xiao, Li You. Derrick Wing Kwan Ng, 
+                                "Sensing User's Activity, Channel, and Location with Near-Field Extra-Large-Scale MIMO," in IEEE Transactions on Communications, vol. 72, no. 2, pp. 890-906, Feb. 2024, doi: 10.1109/TCOMM.2023.3324997.
+                            </span>
+                        </p>
+
                     </details>
 
                     <!-- <iframe src="//player.bilibili.com/player.html?aid=945952024&bvid=BV1pW4y1g75a&cid=914642317&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe> -->
@@ -1492,9 +1506,32 @@
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[63] Yifei Zhang, <b>Zhen Gao</b>, Jingjing Zhao, Ziming He, Yunsheng Zhang, Chen Lu, Pei Xiao, "AI Empowered Channel Semantic Acquisition for 
                             6G Integrated Sensing and Communication Networks," in IEEE Network, doi: 10.1109/MNET.2024.3354264.
+                            [<a href="https://arxiv.org/abs/2401.09127" target="_blank">arXiv</a>]
                             [<a href="https://ieeexplore.ieee.org/document/10400499" target="_blank">IEEE URL</a>]
+                            [<a href="https://github.com/Tocaloid/JCASCasterNet" target="_blank">
+                                <font color="#FF0000">Codes</font>
+                            </a>]     
                         </span>
                     </p>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwentyTwo">
+                                    <i class="fa fa-folder-open-o" aria-hidden="true">&nbsp;&nbsp;Click here to
+                                        unfold/fold video.</i>
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapseTwentyTwo" class="panel-collapse collapse">
+                            <div class="panel-body" style="position: relative; padding: 30% 45%;">
+                                <iframe
+                                    src="//player.bilibili.com/player.html?aid=1902896364&bvid=BV14m41167nL&cid=1500377526&page=1&as_wide=1&high_quality=1&autoplay=0&muted=1"
+                                    scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
+                                    style="position: absolute; width: 90%; height: 90%; left: 45px; top: 30px;">
+                                </iframe>
+                            </div>
+                        </div>
+                    </div>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[62] <b>Zhen Gao</b>, Malong Ke, Yikun Mei, Li Qiao, Sheng Chen, Derrick Wing Kwan Ng, H. Vincent Poor, 
@@ -1506,7 +1543,7 @@
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[61] Li Qiao, Anwen Liao, Zhuoran Li, Hua Wang, <b>Zhen Gao</b>, Xiang Gao, Yu Su, Pei Xiao, Li You. Derrick Wing Kwan Ng, 
-                            "Sensing User's Activity, Channel, and Location with Near-Field Extra-Large-Scale MIMO," in IEEE Transactions on Communications, doi: 10.1109/TCOMM.2023.3324997.
+                            "Sensing User's Activity, Channel, and Location with Near-Field Extra-Large-Scale MIMO," in IEEE Transactions on Communications, vol. 72, no. 2, pp. 890-906, Feb. 2024, doi: 10.1109/TCOMM.2023.3324997.
                             [<a href="https://arxiv.org/abs/2307.10837" target="_blank">arXiv</a>]
                             [<a href="https://ieeexplore.ieee.org/document/10286475" target="_blank">IEEE URL</a>]
                             [<a href="https://github.com/All-World/TcomCode" target="_blank">
@@ -1514,6 +1551,25 @@
                             </a>]
                         </span>
                     </p>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwentyThree">
+                                    <i class="fa fa-folder-open-o" aria-hidden="true">&nbsp;&nbsp;Click here to
+                                        unfold/fold video.</i>
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapseTwentyThree" class="panel-collapse collapse">
+                            <div class="panel-body" style="position: relative; padding: 30% 45%;">
+                                <iframe
+                                    src="//player.bilibili.com/player.html?aid=453167355&bvid=BV1j5411z7Fj&cid=1390883757&page=1&as_wide=1&high_quality=1&autoplay=0&muted=1"
+                                    scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
+                                    style="position: absolute; width: 90%; height: 90%; left: 45px; top: 30px;">
+                                </iframe>
+                            </div>
+                        </div>
+                    </div>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[60] L. Li, Y. Yang, L. Bao, <b>Z. Gao</b>, Y. Wu and H. Xiang, "Deep Reinforcement Learning based Downlink Beamforming and 
