--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
             <ul id="latestnews">
 
                 <li> <b>
+                    <font color="#FF0000">[2024.05]</font>
+                </b> 硕士生周星宇，本科生韩梓琦、孙硕获得北京市/校级优秀毕业生；本科生王野获得校级优秀毕业生。
+                </li>
+
+                <li> <b>
                     <font color="#FF0000">[2024.04]</font>
                 </b> Dr. Zhen Gao is the recipient of Beijing Youth Outstanding Science and Technology Papers (
                     <a href="https://www.bast.net.cn/art/2024/3/20/art_31266_19718.html" target="_blank">
@@ -1535,7 +1540,7 @@
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[62] <b>Zhen Gao</b>, Malong Ke, Yikun Mei, Li Qiao, Sheng Chen, Derrick Wing Kwan Ng, H. Vincent Poor, 
-                            "Compressive Sensing-Based Grant-Free Massive Access for 6G Massive Communication," IEEE Internet of Things Journal, doi: 10.1109/JIOT.2023.3334878.
+                            "Compressive Sensing-Based Grant-Free Massive Access for 6G Massive Communication," in IEEE Internet of Things Journal, vol. 11, no. 5, pp. 7411-7435, 1 March1, 2024。
                             [<a href="https://arxiv.org/abs/2311.06770" target="_blank">arXiv</a>]
                             [<a href="https://ieeexplore.ieee.org/document/10329933" target="_blank">IEEE URL</a>]
                         </span>
@@ -1595,8 +1600,8 @@
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[57] <b>Z. Gao</b>, S. Liu, Y. Su, Z. Li, and D. Zheng, "Hybrid Knowledge-Data Driven Channel
-                            Semantic Acquisition and Beamforming for Cell-Free Massive MIMO", to appear in IEEE J. Sel.
-                            Topics Signal Process.
+                            Semantic Acquisition and Beamforming for Cell-Free Massive MIMO", in IEEE Journal of Selected Topics in Signal Processing, 
+                            vol. 17, no. 5, pp. 964-979, Sept. 2023。
                             [<a href="https://arxiv.org/abs/2307.03070" target="_blank">arXiv</a>]
                             [<a href="https://ieeexplore.ieee.org/document/10195164" target="_blank">IEEE URL</a>]
                             <!-- [<a href="https://ieeexplore.ieee.org/document/10130575" target="_blank">IEEE URL</a>] -->
@@ -1628,7 +1633,7 @@
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[56] Z. Li, <b>Z. Gao</b> and T. Li, "Sensing User's Channel and Location with Terahertz
                             Extra-Large Reconfigurable Intelligent Surface under Hybrid-Field Beam Squint Effect,"
-                            accepted by IEEE J. Sel. Top. Sign. Proces, 2023.
+                            in IEEE Journal of Selected Topics in Signal Processing, vol. 17, no. 4, pp. 893-911, July 2023.
                             [<a href="https://arxiv.org/abs/2305.07184" target="_blank">arXiv</a>]
                             [<a href="https://ieeexplore.ieee.org/document/10130575" target="_blank">IEEE URL</a>]
                             [<a href="https://github.com/LiZhuoRan0" target="_blank">
@@ -1810,8 +1815,8 @@
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[48] Y. Wang, <b>Z. Gao</b>, D. Zheng, S. Chen, D. Gunduz, and H. V. Poor,
                             "Transformer-Empowered
-                            6G Intelligent Networks: From Massive MIMO Processing to Semantic Communication," accepted
-                            by IEEE Wireless Communications.
+                            6G Intelligent Networks: From Massive MIMO Processing to Semantic Communication," in IEEE Wireless Communications, 
+                            vol. 30, no. 6, pp. 127-135, December 2023.
                             [<a href="https://arxiv.org/pdf/2205.03770.pdf" target="_blank">arXiv</a>]
                             [<a href="https://ieeexplore.ieee.org/document/9961131" target="_blank">IEEE URL</a>]
                             [<a href="https://www.bilibili.com/video/BV1pK41117r6" target="_blank">Tutorial Link</a>]
