--- a/index.html
+++ b/index.html
@@ -2567,6 +2567,20 @@
                     <font style="font-size: 18px;">Conferences</font>
                 </b>: </p>
             <font size="3">
+
+                <ul>
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[32] S. Liu, X. Yu, Z. Gao, and D. W. K. Ng, "DPSS-based dictionary design for near-field XL-MIMO channel estimation'', 
+                            in <i>Proc. IEEE Int. Conf. Commun. (ICC)</i>, Denver, CO, USA, Jun. 2024, pp. 1-6.
+                            <!-- [<a href="https://ieeexplore.ieee.org/document/9940255" target="_blank">URL</a>] -->
+                            [<a href="https://arxiv.org/abs/2310.18180" target="_blank">arXiv</a>]
+                            [<a href="https://github.com/scliubit/DPSS-Slides-Codes" target="_blank">Codes</a>]
+                            [<a href="https://github.com/scliubit/DPSS-Slides-Codes/blob/main/Slides/slides_icc24.pdf" target="_blank">Slides</a>]
+                            <!-- [<a href="./Files/IWCMC_Slides/kmlSlides.pdf" target="_blank">Slides</a>] -->
+                        </span>
+                    </p>
+                </ul>
+
                 <ul>
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[31] M. Wu, Z. Wan, Y. Wang, S. Liu and Z. Gao, "Deep Learning-Based Rate-Splitting
