--- a/index.html
+++ b/index.html
@@ -84,6 +84,18 @@
 
                 <li> <b>
                     <font color="#FF0000">[2024.05]</font>
+                </b> Paper of Li Qiao was accepted by IEEE JSAC (
+                <font>乔力论文被IEEE JSAC (IF=16.4)期刊录用</font>
+                </a>)【基于空中计算的联邦边缘学习与海量接入】
+                </li>
+
+                <li> <b>
+                    <font color="#FF0000">[2024.05]</font>
+                </b> 张翼飞获得华为IMC Challenge（国际大学生数学竞赛）空间分离与估计赛道客观成绩第1名、主观成绩第3名，奖金共计9千欧元。
+                </li>
+
+                <li> <b>
+                    <font color="#FF0000">[2024.05]</font>
                 </b> 硕士生周星宇，本科生韩梓琦、孙硕获得北京市/校级优秀毕业生；本科生王野获得校级优秀毕业生。
                 </li>
 
