--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
             <ul id="latestnews">
 
                 <li> <b>
+                    <font color="#FF0000">[2024.06]</font>
+                </b> Xingyu Zhou was awarded Xu-Teli Fellowship（周星宇获得北理工学生最高荣誉奖学金--徐特立奖学金）
+                </li>
+
+                <li> <b>
                     <font color="#FF0000">[2024.05]</font>
                 </b> Paper of Li Qiao was accepted by IEEE JSAC (
                 <font>乔力论文被IEEE JSAC (IF=16.4)期刊录用</font>
@@ -147,31 +152,7 @@
                     </a>)【6G海量通信免调度接入】
                 </li>
 
-                <li> <b>
-                        <font color="#FF0000">[2023.11]</font>
-                    </b> 博士生万子维、吴铭晖，硕士生周星宇获得研究生特等奖学金，博士生应科柯获得国瑞奖学金。
-                </li>
-
-                <li> <b>
-                        <font color="#FF0000">[2023.11]</font>
-                    </b> Ph.D. student Minghui Wu and M.S. student Xingyu Zhou are awarded National Scholarship (博士生吴铭晖和硕士生周星宇获得研究生国家奖学金)
-                </li>
-
-                <li> <b>
-                        <font color="#FF0000">[2023.11]</font>
-                    </b> Dr. Zhen Gao was selected into World's Top 2% Scientists   
-                    <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/6" target="_blank">
-                        <font>(高镇入选斯坦福大学全球前2%顶尖科学家2022年度榜单)</font>
-                    </a>
-                </li>
-
-                <li> <b>
-                        <font color="#FF0000">[2023.11]</font>
-                    </b> Paper of Kuiyu Wang was awarded IEEE ICCT 2023 Best Paper (王馗宇论文入选国际学术会议IEEE ICCT 2023最佳论文奖) 
-                    <a href="https://arims.bit.edu.cn/xw/943086d7db764bc1a0788d5fefb2ec34.htm" target="_blank">
-                        <font color="#FF0000">【北理工交叉院新闻报道】</font>
-                    </a>
-                </li>
+                
 
                 <details>
                     <summary>View More Earlier News</summary>
@@ -181,6 +162,33 @@
                         <font>高镇入选重要期刊IEEE Trans. Veh. Technol. 编委</font>
                     </a>)
                 </li> -->
+
+                    <li> <b>
+                        <font color="#FF0000">[2023.11]</font>
+                    </b> 博士生万子维、吴铭晖，硕士生周星宇获得研究生特等奖学金，博士生应科柯获得国瑞奖学金。
+                </li>
+
+                    <li> <b>
+                        <font color="#FF0000">[2023.11]</font>
+                    </b> Ph.D. student Minghui Wu and M.S. student Xingyu Zhou are awarded National Scholarship (博士生吴铭晖和硕士生周星宇获得研究生国家奖学金)
+                </li>
+
+                    <li> <b>
+                        <font color="#FF0000">[2023.11]</font>
+                    </b> Dr. Zhen Gao was selected into World's Top 2% Scientists   
+                    <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/6" target="_blank">
+                        <font>(高镇入选斯坦福大学全球前2%顶尖科学家2022年度榜单)</font>
+                    </a>
+                </li>
+
+                    <li> <b>
+                        <font color="#FF0000">[2023.11]</font>
+                    </b> Paper of Kuiyu Wang was awarded IEEE ICCT 2023 Best Paper (王馗宇论文入选国际学术会议IEEE ICCT 2023最佳论文奖) 
+                    <a href="https://arims.bit.edu.cn/xw/943086d7db764bc1a0788d5fefb2ec34.htm" target="_blank">
+                        <font color="#FF0000">【北理工交叉院新闻报道】</font>
+                    </a>
+                </li>
+
                     <li> <b>
                         <font color="#FF0000">[2023.10]</font>
                         </b> Paper of Li Qiao was accecpted by IEEE TCOM (
