--- a/index.html
+++ b/index.html
@@ -84,12 +84,18 @@
 
                 <li> <b>
                     <font color="#FF0000">[2024.06]</font>
-                </b> Xingyu Zhou was awarded Xu-Teli Fellowship（周星宇获得北理工学生最高荣誉奖学金--徐特立奖学金）
+                </b> Li Qiao was awarded China North Industries Fellowship（乔力获得北方工业奖学金2万元）
+                </li>
+
+                <li> <b>
+                    <font color="#FF0000">[2024.06]</font>
+                </b> Xingyu Zhou was awarded Xu-Teli Fellowship（周星宇获得北理工学生最高荣誉奖学金--徐特立奖学金5万元）
                 </li>
 
                 <li> <b>
                     <font color="#FF0000">[2024.05]</font>
                 </b> Paper of Li Qiao was accepted by IEEE JSAC (
+                    <a href="https://arxiv.org/abs/2405.15969" target="_blank">
                 <font>乔力论文被IEEE JSAC (IF=16.4)期刊录用</font>
                 </a>)【基于空中计算的联邦边缘学习与海量接入】
                 </li>
